JSON.stringify(Date) loses the milliseconds information https://bugs.webkit.org/show_bug.cgi?id=29063

Reviewed by Maciej Stachowiak.

Make sure we include milliseconds in the output of toISOString.

Canonical link: https://commits.webkit.org/39771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@48202 268f45cc-cd09-0410-ab3c-d52691b4dbfc